--- a/css/styles.css
+++ b/css/styles.css
@@ -1,50 +1,71 @@
-html, body {
-  height: 100%;
-}
-
-.container {
-  height: 100%;
-  margin-left: 75px;
-  padding: 1px 16px;
-}
-
-/*#nav_bar {
-  margin-left: 15px;
-  margin-top: 15px;
-}*/
-
 body {
-  background-color: #727e91;
+  background-image: url('../img/bg_cover.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 body {
-    margin: 0;
+  font-family: 'Arial', sans-serif;
+  color: white;
+  font-size: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+@media (max-width: 767px) {
+    body {
+      background-image: url('../img/mobile_bg.jpg');
+    }
+
 }
 
 ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 175px;
-    background-color: #727e91;
-    position: fixed;
-    height: 100%;
-    overflow: auto;
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
 }
 
-li a {
-    display: block;
-    color: #000;
-    padding: 8px 16px;
-    text-decoration: none;
+ul li {
+  float: left;
+  width: 200px;
+  height: 40px;
+  background-color: black;
+  opacity: 0.5;
+  line-height: 40px;
+  text-align: center;
+  font-size: 20px;
 }
 
-li a.active {
-    background-color: #teal;
-    color: white;
+ul li a {
+  text-decoration: none;
+  color: white;
+  display: block;
 }
 
-li a:hover:not(.active) {
-    background-color: #teal;
-    color: white;
+ul li a:hover {
+  background-color: white;
+  color: black;
+  text-decoration: none;
+}
+
+ul li ul li {
+  display: none;
+}
+
+ul li:hover ul li {
+  display: block;
+}
+
+#row1 {
+  margin-top: 200px;
+}
+
+#row1_col1 {
+  float: left;
+}
+
+#row1_col2 {
+  float: right;
 }
